<resources>
    <string name="app_name">TEST</string>
    <string name="start">Начало</string>
    <string name="words">Словарь</string>
    <string name="stats">Статистика</string>
    <string name="ticket">Помощь</string>

    <string name="back">Вернуться</string>
    <string name="level">Уровень:</string>
    // Диалоговые окна в уровнях - начало
    <string name="level_1">Выбери букву и узнай как она произносится.\n\nДля прохождения уровня необходимо получить 10 очков.</string>
    <string name="level_2">Тебе нужно выбрать правильный вариант исходя из названия животного.\n\nДля прохождения уровня необходимо получить 10 очков.</string>
    <string name="level_3">Повторяй за диктором, всё просто :)\n\nДля прохождения уровня необходимо получить 10 очков.</string>
    <string name="level_4">У тебя есть на выбор 3 глагола, выбери из них верный :) .\n\nДля прохождения уровня необходимо получить 10 очков.</string>
    <string name="level_5">3 Варианта один из них правильный, это всё что ты должен знать :3\n\nДля прохождения уровня необходимо получить 10 очков.</string>
    <string name="level_6">Теперь проверим твою грамматику) Напиши правильное писание слова!\n\nДля прохождения уровня необходимо получить 10 очков.</string>
    <string name="level_7">Выбери подходящую картинку к слову\n\nДля прохождения уровня необходимо получить 10 очков.</string>
    <string name="level_9">Правда/Ложь, выбери верное утверждение.\n\nДля прохождения уровня необходимо получить 10 очков.</string>
    <string name="level_10">Выбери подходящее по смыслу и грамматики слово.\n\nДля прохождения уровня необходимо получить 10 очков.</string>
    <string name="level_1_end">Прими мои поздравления, твой первый уровень уже пройден, дальше больше.\n\nНажимай продолжить и переходи на следующий уровень! </string>
    <string name="level_2_end">Поздравляю тебя! Ты прошёл второй уровень, дальше больше.\n\nНажимай продолжить и переходи на следующий уровень! </string>
    <string name="level_3_end">Молодец! Ты прошёл уже третий уровень, не останавливайся.\n\nНажимай продолжить и переходи на следующий уровень! </string>
    <string name="level_4_end">Друг, данный уровень тебе нужно пройти без единой ошибки .\n\nДля прохождения уровня необходимо получить 9 очков.</string>
    <string name="level_4_over">Поздравляю ты прошёл достаточно сложный уровень.\n\nПодготовься к следующему уровню!</string>
    <string name="level_6_end">Вау, не ожидал от тебя такого)\n\nПродолжай дальше!</string>
    <string name="level_7_end">Продолжаем!!\n\nПосмотрим что будешь делать в этот раз!!!</string>

    // Диалоговые окна в уровнях - конецТ

    <string name="textcontinue">Продолжить</string>
    <string name="textrestart">Перезапустить</string>
    <string name="level_two_1">Выбери:</string>
    <string name="level_three">Повторяй за диктором!</string>
    <string name="level_three_1">Транскрипция слова</string>
    <string name="level_for">Глагол</string>
    <string name="level_five">Семья</string>
    <string name="level_six">Как пишется это слово?</string>
    <string name="level_eight">Где слово?</string>
    <string name="level_nine">Это правда или ложь?</string>
    <string name="level_ten">Whats your ph..?</string>

</resources>