<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/level1"
        tools:ignore="ImageContrastCheck,ImageContrastCheck"
        android:contentDescription="TODO" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_stroke_yellow_60_press_blue"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="#607D8B"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/text_levelss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="10dp"
                    android:text="@string/level"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/point1"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point2"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point3"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point4"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point5"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point6"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point7"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point9"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_center"
                    android:layout_width="216dp"
                    android:layout_height="271dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="100"
                    android:background="@drawable/style_btn_stoke_green60_press"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_test"


                    />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/level_three"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="322dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_center"
                android:layout_width="20dp"
                android:textSize="30dp"
                android:paddingLeft="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_weight="1"
                android:background="@drawable/style_btn_stoke_yellow"
                android:text="@string/level_three_1" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>