<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_no_press"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:src="@drawable/level1"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_stroke_yellow_60_press_blue"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="#607D8B"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/text_levelss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="10dp"
                    android:text="@string/level"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/point1"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point2"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point3"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point4"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point5"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point6"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

                <TextView
                    android:id="@+id/point7"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/style_points"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_level_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="40dp"
                    android:text="@string/level_eight"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="40dp"
                    android:paddingStart="0dp"
                    android:paddingLeft="40dp"
                    android:paddingTop="0dp"
                    android:text="@string/level_eight"
                    android:textColor="#00FF88"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_right"
                    android:layout_width="308dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="100"
                    android:background="@drawable/style_btn_stoke_green60_press"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_test"


                    />

                <ImageView
                    android:id="@+id/img_left"
                    android:layout_width="308dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="100"
                    android:background="@drawable/style_btn_stoke_green60_press"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_test"


                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="25dp">

            <ImageView
                android:id="@+id/img_right1"
                android:layout_width="308dp"
                android:layout_height="150dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/style_btn_stoke_green60_press"
                android:scaleType="centerCrop"
                android:src="@drawable/img_test"


                />

            <ImageView
                android:id="@+id/img_left1"
                android:layout_width="308dp"
                android:layout_height="150dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/style_btn_stoke_green60_press"
                android:scaleType="centerCrop"
                android:src="@drawable/img_test"


                />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>